fix horizontal scroll bar

--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: space-between;
     padding: 40px 100px;
@@ -18,7 +18,7 @@ header {
 
 .banner {
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     min-height: 100vh;
     padding: 100px;
     background-color: #040014;
@@ -50,10 +50,7 @@ header .logo {
     width: 60px;
     height: 40px;
     position: relative;
-    margin: 30px 100px;
-    margin-right: 100px;
-    margin-left: 20px;
-    margin-top: 30px;
+    margin: 36px 100px 36px 20px;
     cursor: pointer;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -135,13 +132,14 @@ header .logo {
     text-decoration: none;
     border: 1px solid #fff;
     margin: 30px 5px;
+    color: #51e5ff;
 }
 
 .sci li a:hover {
     background: #fff;
 }
 
-/* .banner .open {
+/* #navigation .open {
     transform: translateX(-400px);
 } */
 
@@ -151,23 +149,23 @@ header .logo {
     right: 0;
     width: 400px;
     height: 50vh;
-    background: #51e5ff;
+    background: #FE5F55;
     /* display: grid; */
     display: none;
     place-items: center;
 }
 
-#navigation  ul {
+#navigation ul {
     position: relative;
     display: flex;
     flex-direction: column;
 }
 
-#navigation  ul li {
+#navigation ul li {
     list-style-type: none;
 }
 
-#navigation  ul li a {
+#navigation ul li a {
     color: #040014;
     text-decoration: none;
     display: inline-block;
@@ -177,7 +175,7 @@ header .logo {
     margin-bottom: 10px;
 }
 
-#navigation  ul li a:hover {
+#navigation ul li a:hover {
     text-decoration: underline;
 }
 
